--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "discord.js": "^11.5.1",
     "dotenv": "^8.0.0",
+    "later": "^1.2.0",
     "leetcode-cli": "^2.6.1"
   },
   "devDependencies": {
